[package]
name = "may_minihttp"
version = "0.1.0"
edition = "2018"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
may = "0.3"
log = "0.4"
time = "0.2"
itoa = "0.4"
bytes = "1"
httparse = "1"
lazy_static = "1"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
rusty-leveldb = "1.0.1"

[dev-dependencies]
mimalloc = "0.1"
num_cpus = "1.0"
oorandom = "11"
smallvec = "1.1"
env_logger = "0.8"
serde = "1.0.138"
serde_json = "1.0.82"
yarte = { version = "0.15", features = ["bytes-buf", "json"] }

[profile.release]
lto = false
opt-level = 3
codegen-units = 1